--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
+    "babel-preset-es2017": "^6.24.1",
     "bootstrap-loader": "^2.0.0",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.27.3",
