--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "angular": "^1.5.9",
     "angular-animate": "^1.5.9",
     "angular-route": "^1.6.0",
-    "animate.css": "^3.5.2",
-    "bootstrap": "^3.3.7"
+    "animate.css": "^3.5.2"
   },
   "devDependencies": {
     "angular": "^1.6.3",
@@ -26,9 +25,9 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-es2017": "^6.24.1",
-    "bootstrap-loader": "^2.0.0",
-    "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.27.3",
+    "eslint": "^4.17.0",
+    "eslint-loader": "^1.9.0",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
